<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_margin="20dp"
        android:background="@drawable/round_bg11"
        android:padding="18dp"

        >


        <TextView
            android:id="@+id/order_user_name"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/User_Name"
            android:textColor="@android:color/white"
            android:textSize="14dp"
            android:textStyle="bold"


            />

        <TextView
            android:id="@+id/order_phone_number"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:textAlignment="viewEnd"
            android:textColor="@android:color/white"
            android:textSize="14dp"
            android:textStyle="bold"
            tools:text="@string/Phone_number" />

        <TextView
            android:id="@+id/order_total"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cart_product_quantity"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:text="@string/Total_price"
            android:textColor="@android:color/white"
            android:textSize="14dp"
            android:textStyle="bold"

            />

        <TextView
            android:id="@+id/order_address_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/order_total"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:text="@string/Address_City"
            android:textColor="@android:color/white"
            android:textSize="14dp"

            android:textStyle="bold" />

        <TextView
            android:id="@+id/order_date_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/order_address_city"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:text="@string/Date_Time"
            android:textColor="@android:color/white"
            android:textSize="14dp"

            android:textStyle="bold" />

        <Button
            android:id="@+id/show_all_products"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/order_date_time"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/btn_round11"
            android:text="@string/show_order_products"
            android:textColor="@android:color/black" />

    </RelativeLayout>



</RelativeLayout>