<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfirmFinalOrderActivity">

    <TextView
        android:id="@+id/textView23"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/textView23"
        android:background="@drawable/wave"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.196" />

    <ImageView
        android:id="@+id/applogo"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:src="@drawable/dasd"

        />

    <TextView
        android:id="@+id/txtconferm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView24"
        android:text="Please enter your Delivery details"
        android:textSize="25dp"
        android:textColor="#E91E63"
        android:layout_margin="15dp"
        android:textAlignment="center"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/delivery_name"
        android:layout_width="369dp"
        android:layout_height="50dp"
        android:layout_below="@+id/txtconferm"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="20dp"
        android:padding="10dp"
        android:background="@drawable/round_border"
        android:hint="@string/Deliver_name" />

    <EditText
        android:id="@+id/delivery_phone_num"
        android:layout_width="369dp"
        android:layout_height="50dp"
        android:layout_below="@+id/delivery_name"
        android:padding="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/round_border"
        android:hint="@string/Delivery_phone"
        android:inputType="number" />


    <EditText
        android:id="@+id/delivery_Address"
        android:layout_width="369dp"
        android:layout_height="50dp"
        android:layout_below="@+id/delivery_phone_num"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:padding="10dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/round_border"
        android:hint="@string/delivary_address" />

    <EditText
        android:id="@+id/delivery_province"
        android:layout_width="369dp"
        android:layout_height="50dp"
        android:layout_below="@+id/delivery_Address"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:padding="10dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/round_border"
        android:hint="@string/deli_Province" />

    <EditText
        android:id="@+id/delivery_District"
        android:layout_width="369dp"
        android:layout_height="50dp"
        android:layout_below="@+id/delivery_province"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:padding="10dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/round_border"
        android:hint="@string/Deli_District" />


    <EditText
        android:id="@+id/delivery_City"
        android:layout_width="369dp"
        android:layout_height="50dp"
        android:layout_below="@+id/delivery_District"
        android:layout_marginLeft="20dp"
        android:padding="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/round_border"
        android:hint="@string/Deli_City" />

    <Button
        android:id="@+id/conferm_final_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/delivery_City"
        android:layout_marginLeft="30dp"

        android:layout_marginTop="50dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/round_bg"
        android:text="@string/btn_Buy_Now"
        android:textColor="@android:color/white"
        android:textSize="15dp" />


</RelativeLayout>