<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_margin="20dp"
        android:background="@drawable/round_bg11"
        android:padding="10dp"
        >


        <TextView
            android:id="@+id/cart_product_name"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/Product_Name"
            android:textColor="@android:color/white"
            android:textSize="14dp"
            android:textStyle="bold"

            />

        <TextView
            android:id="@+id/cart_product_quantity"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/Product_Quantity"
            android:textAlignment="viewEnd"
            android:textColor="@android:color/white"
            android:textSize="14dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/cart_product_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cart_product_quantity"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/Product_Price"
            android:textColor="@android:color/white"
            android:textSize="14dp"
            android:textStyle="bold"

            />

    </RelativeLayout>

</RelativeLayout>