<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".AdminMaintainItem"

    android:layout_marginTop="20dp"
    android:layout_marginStart="15dp"

    android:layout_marginEnd="15dp"

    app:cardElevation="15dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginRight="0dp"
        android:layout_marginLeft="0dp"
        >



        <ImageView
            android:id="@+id/item_image_m"
            android:layout_width="match_parent"
            android:layout_height="200dp"

            android:scaleType="centerCrop"
            android:layout_marginTop="2dp"
            />

        <EditText

            android:id="@+id/item_name_m"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/item_image_m"
            android:layout_margin="5dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/round_border"
            android:hint="@string/Product_Name"
            android:padding="8dp"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="20dp"
            android:textStyle="bold"

            />

        <EditText
            android:id="@+id/item_brand_m"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/item_name_m"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/round_border"

            android:hint="@string/ProductBrand"
            android:padding="8dp"

            android:textAlignment="center"

            android:textColor="@color/colorPrimary"
            android:textSize="20dp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/item_price_m"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/item_brand_m"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/round_border"
            android:hint="@string/Productprice"
            android:inputType="number"
            android:padding="8dp"
            android:textAlignment="center"

            android:textColor="@color/colorPrimary"
            android:textSize="20dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/item_description_m"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/item_price_m"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/round_border"
            android:hint="@string/ProductDiscription"
            android:padding="8dp"

            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="20dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/rdGrp13"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:id="@+id/lineq1">

            <Button
                android:id="@+id/delete_button_I"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"

                android:background="@drawable/round_bg"
                android:padding="8dp"
                android:text="@string/delete"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"

                android:textSize="20dp"
                android:textStyle="bold"

                />


            <Button
                android:id="@+id/update_button_I"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/round_bg"
                android:padding="8dp"
                android:text="@string/update"

                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textSize="20dp"
                android:textStyle="bold" />

        </LinearLayout>



        <RadioGroup
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.909"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.738"
            android:layout_below="@id/item_description_m"
            android:paddingEnd="50dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:id="@+id/rdGrp13"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            android:background="@drawable/atw_border_image"
            >

            <RadioButton
                android:id="@+id/rdBtnAvailable_m"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="15dp"
                android:text="@string/available"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.716" />

            <RadioButton
                android:id="@+id/rdBtnNotAvailable_m"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/notAvailable"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.878"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.716" />

        </RadioGroup>


    </RelativeLayout>

</androidx.cardview.widget.CardView>